# ensembl-metadata-api

./: .gitignore  .gitlab-ci.yml  .python-version  .travis.yml  Dockerfile  MANIFEST.in  NOTICE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  sampledb.sql  setup.py  to_delete.travis.yml
.github/worflows/: test.yml
.github/workflows/: ci.yml  test.yml
docs/: conf.py  install.rst
protos/: ensembl_metadata.proto
protos/ensembl/production/metadata/: ensembl_metadata.proto
protos/ensembl/production/metadata/grpc/: ensembl_metadata.proto
scripts/: build_docs.sh
sql/: assembly_sequence.sql  attributes_core.sql  attributes_geneset.sql  attributes_otherfeatures.sql  attributes_rnaseq.sql  datasets_core.sql  datasets_otherfeatures.sql  datasets_rnaseq.sql  load_metadata.sql  tmp_tables.sql
src/ensembl/: __init__.py  hello_world.py
src/ensembl/production/metadata/: __init__.py  api.py  client_examples.py  config.py  ensembl_metadata_pb2.py  ensembl_metadata_pb2_grpc.py  factory.py  models.py  requirements.txt  service.py  updater.py
src/scripts/: load_homologies_stats.py  load_homologies_stats_2.py  load_meta_duckdb.py  load_regulation_stats.py  load_variation_stats.py  update_test_set.py  updates_metadata.sql
src/scripts/homology_stats_241/: aegilops_tauschii_compara_110.json  arabidopsis_thaliana_compara_110.json  astyanax_mexicanus_compara_110.json  astyanax_mexicanus_gca023375835v1_compara_110.json  astyanax_mexicanus_gca023375845v1_compara_110.json  astyanax_mexicanus_gca023375975v1_compara_110.json  astyanax_mexicanus_pachon_compara_110.json  brassica_napus_compara_110.json  brassica_oleracea_compara_110.json  brassica_rapa_compara_110.json  caenorhabditis_elegans_compara_110.json  canis_lupus_familiaris_compara_110.json  canis_lupus_familiarisbasenji_compara_110.json  canis_lupus_familiarisboxer_compara_110.json  canis_lupus_familiarisgreatdane_compara_110.json  canis_lupus_familiarisgsd_compara_110.json  capra_hircus_blackbengal_compara_110.json  capra_hircus_compara_110.json  cricetulus_griseus_chok1gshd_compara_110.json  cricetulus_griseus_crigri_compara_110.json  cricetulus_griseus_gca003668045v2_compara_110.json  danio_rerio_compara_110.json  drosophila_melanogaster_compara_110.json  equus_caballus_compara_110.json  escherichia_coli_str_k_12_substr_mg1655_gca_000005845_compara_110.json  felis_catus_compara_110.json  gallus_gallus_compara_110.json  gallus_gallus_gca000002315v5_compara_110.json  gallus_gallus_gca016700215v2_compara_110.json  glycine_max_compara_110.json  homo_sapiens_37_compara_110.json  homo_sapiens_gca018467015v1_compara_110.json  homo_sapiens_gca018469415v1_compara_110.json  homo_sapiens_gca018469685v1_compara_110.json  homo_sapiens_gca018469945v1_compara_110.json  homo_sapiens_gca018470435v1_compara_110.json  homo_sapiens_gca018470445v1_compara_110.json  homo_sapiens_gca018470465v1_compara_110.json  homo_sapiens_gca018471085v1_compara_110.json  homo_sapiens_gca018471095v1_compara_110.json  (+90 more)
src/scripts/variation/: human_evidence_stats.json  human_pangenome_variation_stats.json  human_variation_stats.json  non_human_evidence_stats.json  non_human_variation_stats.json
src/tests/: README.md  conftest.py  test_api.py  test_check_load.py  test_compara_use_case.py  test_dataset_factory.py  test_exports.py  test_exports_changelog.py  test_exports_json.py  test_exports_stats.py  test_genome_factory.py  test_genome_group_factory.py  test_grpc.py  test_grpc_genome.py  test_grpc_release.py  test_organism_to_organismgroup.py  test_protobuf_msg_factory.py  test_reflection.py  test_release_factory.py  test_scripts.py  test_search.py  test_search_utils.py  test_service.py  test_updater.py  test_updater_utils.py  test_utils.py  tests_exports.py
src/tests/databases/: compara_db.db  core_1.db  core_2.db  core_3.db  core_4.db  core_5.db  core_6.db  core_7.db  core_8.db  dump_mysql_db.py  ensembl_genome_metadata.db  insert.assembly.sql  insert.assembly_sequence.sql  insert.attribute.sql  insert.dataset.sql  insert.dataset_attribute.sql  insert.dataset_source.sql  insert.dataset_type.sql  insert.ensembl_release.sql  insert.ensembl_site.sql  insert.genome.sql  insert.genome_dataset.sql  insert.genome_release.sql  insert.organism.sql  insert.organism_group.sql  insert.organism_group_member.sql  load_mysql_db.py  mysql2sqlite.py  ncbi_taxonomy.db  tables.sql
src/tests/databases/compara_db/: genome_db.txt  table.sql
src/tests/databases/core_1/: attrib_type.txt  coord_system.txt  meta.txt  seq_region_attrib.txt  table.sql
src/tests/databases/core_2/: coord_system.txt  meta.txt
src/tests/databases/core_3/: meta.txt
src/tests/databases/core_4/: meta.txt
src/tests/databases/core_5/: attrib_type.txt  meta.txt  seq_region.txt  table.sql
src/tests/databases/core_6/: meta.txt  seq_region_attrib.txt
src/tests/databases/core_7/: meta.txt  seq_region.txt
src/tests/databases/core_8/: attrib_type.txt  meta.txt  seq_region.txt  seq_region_attrib.txt  seq_region_synonym.txt  table.sql
src/tests/databases/core_9/: meta.txt  seq_region.txt
src/tests/databases/ensembl_genome_metadata/: assembly.txt  assembly_sequence.txt  attribute.txt  dataset.txt  dataset_attribute.txt  dataset_source.txt  dataset_type.txt  ensembl_release.txt  genome.txt  genome_dataset.txt  genome_release.txt  ncbi_taxa_name.txt  organism.txt  organism_group.txt  organism_group_member.txt  table.sql
src/tests/databases/ensembl_metadata/: dataset.txt  genome_dataset.txt  organism.txt  organism_group.txt
src/tests/databases/ncbi_taxonomy/: ncbi_taxa_name.txt  table.sql
src/tests/sample/: metadata_fixtures.py
src/tests/sql/: core_test_databases.sql  ensembl_genome_metadata.sql  ncbi_taxonomy.sql
tests/: Core_testdb_creater.sql  TEST.db  config_test.py  ensembl_genome_metadata.sql  ensembl_metadata_2020.sql  ncbi_taxonomy.sql  ncbi_taxonomy.sqlite  test_api.py  test_hello.py  test_service.py  test_updater.py
tests/sql/: Core_testdb_creater.sql  ensembl_genome_metadata.sql  ncbi_taxonomy.sql
(+101 files in other folders)
