[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
log_cli_level = "DEBUG"
addopts = "-s"

[tool.mypy]
python_version = 3.8
mypy_path = "src"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/ensembl"]


