# .. See the NOTICE file distributed with this work for additional information
#    regarding copyright ownership.
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#        http://www.apache.org/licenses/LICENSE-2.0
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "ensembl-metadata-api"
description = "Ensembl Metadata API"
requires-python = ">= 3.10"
version = "3.0.0"
dynamic = ["readme"]
authors = [
    { name = "Alisha Aneja", email = "aaneja@ebi.ac.uk" },
    { name = "Bilal El Houdaigui", email = "bilal@ebi.ac.uk" },
    { name = "Daniel Poppleton", email = "danielp@ebi.ac.uk" },
    { name = "Marc Chakiachvili", email = "mchakiachvili@ebi.ac.uk" },
    { name = "Sanjay Boddu", email = "sboddu@ebi.ac.uk" },
    { name = "Vinay Kaikala", email = "vinay@ebi.ac.uk" },
]
license = {text = "Apache License 2.0"}
keywords = [
    "ensembl",
    "production",
    "metadata",
    "genome metadata",
    "sqlalchemy",
    "grpc"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ensembl-utils >= 0.8.0",
    "ensembl-py >= 3.0.0",
    "grpcio",
    "protobuf",
    "grpcio-tools",
    "grpcio-reflection",
    "sqlalchemy >= 2.0",
    "duckdb >= 1.2.0",
    "duckdb-engine >= 0.17.0",
    "pymysql",
    "mysqlclient",
    "pydantic"
]

[project.urls]
Homepage = "https://www.ensembl.org"
Repository = "https://github.com/Ensembl/ensembl-metadata-api"
"Download" = "https://github.com/Ensembl/ensembl-metadata-api"
Issues = "https://github.com/Ensembl/ensembl-metadata-api/issues"

[project.optional-dependencies]
test = [
    "pylint",
    "mypy",
    "coverage[toml]",
    "pytest-grpc",
    "yagrc == 1.1.2",
]
dev = [
    "ensembl-metadata-api[test]", # Include test dependencies
    "black",
]

[project.scripts]
ensembl-release = "scripts.release:main"
ensembl-ftp-export = "ensembl.production.metadata.scripts.ftp_export:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.black]
line-length = 110

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "logging-fstring-interpolation",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import",
]

[tool.mypy]
mypy_path = "src/ensembl"
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
log_cli_level = "DEBUG"
addopts = [
    "--import-mode=importlib",
    "--tb=native",
]
norecursedirs = ["docs", "*.egg_info"]

[tool.coverage.report]
exclude_also = [
    # Do not complain about missing debug-only code
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    # Do not complain if tests do not hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    # Do not complain if non-runnable code is not run
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def main",
    "def .*_cli",
    # Do not complain about abstract methods, they are not run
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
source = ["src/ensembl"]
